--- a/react_w1/package.json
+++ b/react_w1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-prac-week1",
+  "name": "week-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,11 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "5.0.1",
-    "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
